--- a/locales/zh_CN/LC_MESSAGES/render/hiding.po
+++ b/locales/zh_CN/LC_MESSAGES/render/hiding.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2022, Executable Book Project
 # This file is distributed under the same license as the MyST-NB package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# xinetzone <xinzone@outlook.com>, 2022.
 #
 #, fuzzy
 msgid ""
