deploy: 38ec1cf6ca2b577a38328c1dba9c14a7fdc4593a

--- a/_sources/render/format_code_cells.ipynb
+++ b/_sources/render/format_code_cells.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ad49266",
+   "id": "d67f9c38",
    "metadata": {},
    "source": [
     "(render/code-cells)=\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "690d23df",
+   "id": "32001a55",
    "metadata": {
     "mystnb": {
      "number_source_lines": true
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ede09e",
+   "id": "0f1f679d",
    "metadata": {},
    "source": [
     "(render/output/stdout-stderr)=\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6600757a",
+   "id": "0e5ce8ad",
    "metadata": {
     "tags": [
      "remove-input",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47484ca6",
+   "id": "eceb125a",
    "metadata": {},
    "source": [
     "Alternatively, you can configure how stdout is dealt with at a global configuration level, using the `nb_output_stderr` configuration value.\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12bd9ac3",
+   "id": "2751b65f",
    "metadata": {
     "tags": [
      "hide-output"
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd645f2",
+   "id": "c7c156f0",
    "metadata": {},
    "source": [
     "Items in this dictionary can be overridden by the `nb_mime_priority_overrides` configuration option, in your `conf.py`.\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f586e745",
+   "id": "fdc1d86a",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "070dbe1a",
+   "id": "666723ee",
    "metadata": {},
    "source": [
     "Now we can link to the image from anywhere in our documentation: [swim to the fish](fun-fish-ref)\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f82f685e",
+   "id": "80bab9b8",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -580,31 +580,31 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_f04bf\" class=\"dataframe align-center\">\n",
+       "<table id=\"T_98890\" class=\"dataframe align-center\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_f04bf_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
+       "      <th id=\"T_98890_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f04bf_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_f04bf_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+       "      <th id=\"T_98890_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_98890_row0_col0\" class=\"data row0 col0\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f04bf_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_f04bf_row1_col0\" class=\"data row1 col0\" >2</td>\n",
+       "      <th id=\"T_98890_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_98890_row1_col0\" class=\"data row1 col0\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f04bf_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_f04bf_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <th id=\"T_98890_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_98890_row2_col0\" class=\"data row2 col0\" >3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb0779b6110>"
+       "<pandas.io.formats.style.Styler at 0x7f157bd97790>"
       ]
      },
      "execution_count": 5,
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5876d6e",
+   "id": "811bef9c",
    "metadata": {},
    "source": [
     "(render/output/markdown)=\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e9192ec",
+   "id": "456882d7",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6bb32a1",
+   "id": "fdced4ea",
    "metadata": {},
    "source": [
     "and even internal images can be rendered!"
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a97e6874",
+   "id": "e495eb07",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55e5a14",
+   "id": "262332f3",
    "metadata": {},
    "source": [
     "But setting the Markdown format to `myst` will allow for more advanced formatting,\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "637fce86",
+   "id": "c4da41cc",
    "metadata": {
     "mystnb": {
      "markdown_format": "myst"
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56cf747b",
+   "id": "353692a4",
    "metadata": {},
    "source": [
     "(render/output/ansi)=\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a61569e7",
+   "id": "9262eaed",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad205e2",
+   "id": "95f49c62",
    "metadata": {},
    "source": [
     "This uses the built-in {py:class}`~myst_nb.core.lexers.AnsiColorLexer` [pygments lexer](https://pygments.org/).\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "93dd683f",
+   "id": "02cf924e",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eecaf06a",
+   "id": "d1628626",
    "metadata": {},
    "source": [
     ":::{note}\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "21f6a52e",
+   "id": "2861232f",
    "metadata": {},
    "outputs": [
     {
