deploy: 06712f81cf1da2343d5d3aa85b60b21a6b88bb11

--- a/_sources/render/format_code_cells.ipynb
+++ b/_sources/render/format_code_cells.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d67f9c38",
+   "id": "687ccbbb",
    "metadata": {},
    "source": [
     "(render/code-cells)=\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32001a55",
+   "id": "4a72ca65",
    "metadata": {
     "mystnb": {
      "number_source_lines": true
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f1f679d",
+   "id": "51a65c67",
    "metadata": {},
    "source": [
     "(render/output/stdout-stderr)=\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e5ce8ad",
+   "id": "e8d2b430",
    "metadata": {
     "tags": [
      "remove-input",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eceb125a",
+   "id": "dba8a6b9",
    "metadata": {},
    "source": [
     "Alternatively, you can configure how stdout is dealt with at a global configuration level, using the `nb_output_stderr` configuration value.\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2751b65f",
+   "id": "3560d8ba",
    "metadata": {
     "tags": [
      "hide-output"
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c156f0",
+   "id": "11fb41fa",
    "metadata": {},
    "source": [
     "Items in this dictionary can be overridden by the `nb_mime_priority_overrides` configuration option, in your `conf.py`.\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fdc1d86a",
+   "id": "4c434e08",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "666723ee",
+   "id": "70ae4393",
    "metadata": {},
    "source": [
     "Now we can link to the image from anywhere in our documentation: [swim to the fish](fun-fish-ref)\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "80bab9b8",
+   "id": "3911ebdc",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -580,31 +580,31 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_98890\" class=\"dataframe align-center\">\n",
+       "<table id=\"T_a023f\" class=\"dataframe align-center\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_98890_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
+       "      <th id=\"T_a023f_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_98890_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_98890_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+       "      <th id=\"T_a023f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_a023f_row0_col0\" class=\"data row0 col0\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_98890_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_98890_row1_col0\" class=\"data row1 col0\" >2</td>\n",
+       "      <th id=\"T_a023f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_a023f_row1_col0\" class=\"data row1 col0\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_98890_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_98890_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <th id=\"T_a023f_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_a023f_row2_col0\" class=\"data row2 col0\" >3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f157bd97790>"
+       "<pandas.io.formats.style.Styler at 0x7f722496b550>"
       ]
      },
      "execution_count": 5,
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811bef9c",
+   "id": "f0315696",
    "metadata": {},
    "source": [
     "(render/output/markdown)=\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "456882d7",
+   "id": "0735e812",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdced4ea",
+   "id": "2a2aaf3b",
    "metadata": {},
    "source": [
     "and even internal images can be rendered!"
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e495eb07",
+   "id": "e27b9ff8",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "262332f3",
+   "id": "59d1f59d",
    "metadata": {},
    "source": [
     "But setting the Markdown format to `myst` will allow for more advanced formatting,\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c4da41cc",
+   "id": "86d49723",
    "metadata": {
     "mystnb": {
      "markdown_format": "myst"
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "353692a4",
+   "id": "f5fb546f",
    "metadata": {},
    "source": [
     "(render/output/ansi)=\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9262eaed",
+   "id": "e817982c",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f49c62",
+   "id": "73b5b978",
    "metadata": {},
    "source": [
     "This uses the built-in {py:class}`~myst_nb.core.lexers.AnsiColorLexer` [pygments lexer](https://pygments.org/).\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02cf924e",
+   "id": "7f1f0b9b",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1628626",
+   "id": "09998eb4",
    "metadata": {},
    "source": [
     ":::{note}\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2861232f",
+   "id": "6d94c052",
    "metadata": {},
    "outputs": [
     {
